--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -25,3 +25,154 @@ body {
     )
     rgb(var(--background-start-rgb));
 }
+
+.gallery{
+  -webkit-column-count: 3;
+  -moz-column-count: 3;
+  column-count: 3;
+  -webkit-column-width: 33%;
+  -moz-column-width: 33%;
+  column-width: 33%;
+  padding: 0 12px;
+}
+
+.gallery .pics {
+  width: 100%; /* Adjust width for desired thumbnail size */
+  height: 200px; /* Set a fixed height for consistency */
+  cursor: pointer;
+  margin-bottom: 12px;
+  overflow: hidden; /* Ensure images do not overflow */
+}
+
+.gallery .pics img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+
+.model img {
+  max-width: 100%;
+  max-height: 100%;
+  object-fit: contain; /* Adjust as needed */
+}
+
+
+@media(max-width:991px){
+  .gallery{
+    -webkit-column-count: 1;
+    -moz-column-count: 1;
+    column-count: 1;
+ 
+  }
+}
+
+
+
+@media(max-width:480px){
+  .gallery{
+    -webkit-column-count: 1;
+  -moz-column-count: 1;
+  column-count: 1;
+  -webkit-column-width: 100%;
+  -moz-column-width: 100%;
+  column-width: 100%;
+ 
+  }
+}
+
+.model{
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  /* background-color: grey; */
+  visibility: hidden;
+  opacity: 0;
+  transform: scale(0);
+  z-index: 999;
+  transition: opacity .4s ease  visibility .4s ease transform .4s ease-in-out;
+}
+
+.model.open {
+  visibility: visible;
+  opacity: 1;
+  transform: scale(1);
+}
+.model img {
+  width: auto;
+  max-width: 100%;
+  height: auto;
+  max-height: 100%;
+  display: block;
+  line-height: 0;
+  box-sizing: border-box;
+  padding: 20px 0 20px ;
+  margin: 0 auto ;
+}
+
+/* Founder.module.css */
+.container {
+  text-align: center;
+}
+
+.imageRow {
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
+}
+
+.imageContainer {
+  margin: 10px;
+  flex: 1 0 30%;
+  max-width: 30%;
+  text-align: center;
+}
+
+.imageWrapper {
+  position: relative;
+  width: 100%;
+  padding-bottom: 100%; /* 1:1 Aspect Ratio */
+  overflow: hidden;
+}
+
+.imageWrapper img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+
+/* styles/GridComponent.module.css */
+
+.grid-container {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  gap: 20px;
+  padding: 20px;
+}
+
+.grid-item {
+  border: 1px solid #ccc;
+  padding: 20px;
+  text-align: center;
+}
+
+.grid-item h2 {
+  margin-bottom: 10px;
+}
+
+.grid-item img {
+  max-width: 100%;
+  height: auto;
+  margin-bottom: 10px;
+}
+
+
