--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -26,36 +26,28 @@ body {
     rgb(var(--background-start-rgb));
 }
 
-.gallery{
-  -webkit-column-count: 3;
-  -moz-column-count: 3;
-  column-count: 3;
-  -webkit-column-width: 33%;
-  -moz-column-width: 33%;
-  column-width: 33%;
-  padding: 0 12px;
+.gallery {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between; /* Adjust as needed */
+  gap: 12px; /* Adjust the gap between images */
 }
 
 .gallery .pics {
-  width: 100%; /* Adjust width for desired thumbnail size */
-  height: 200px; /* Set a fixed height for consistency */
+  flex: 1 0 30%; /* Adjust as needed */
+  max-width: 30%; /* Adjust as needed */
+  position: relative;
   cursor: pointer;
-  margin-bottom: 12px;
-  overflow: hidden; /* Ensure images do not overflow */
+  overflow: hidden;
 }
 
 .gallery .pics img {
   width: 100%;
-  height: 100%;
+  height: auto;
   object-fit: cover;
+  display: block;
 }
 
-
-.model img {
-  max-width: 100%;
-  max-height: 100%;
-  object-fit: contain; /* Adjust as needed */
-}
 
 
 @media(max-width:991px){
