--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -26,28 +26,40 @@ body {
     rgb(var(--background-start-rgb));
 }
 
-.gallery {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between; /* Adjust as needed */
-  gap: 12px; /* Adjust the gap between images */
+.gallery{
+  -webkit-column-count: 3;
+  -moz-column-count: 3;
+  column-count: 3;
+  -webkit-column-width: 33%;
+  -moz-column-width: 33%;
+  column-width: 33%;
+  padding: 0 12px;
 }
 
 .gallery .pics {
-  flex: 1 0 30%; /* Adjust as needed */
-  max-width: 30%; /* Adjust as needed */
-  position: relative;
+  width: 100%; /* Adjust width for desired thumbnail size */
+  height: 200px; /* Set a fixed height for consistency */
   cursor: pointer;
-  overflow: hidden;
+  margin-bottom: 12px;
+  overflow: hidden; /* Ensure images do not overflow */
 }
 
 .gallery .pics img {
   width: 100%;
-  height: auto;
+  height: 100%;
   object-fit: cover;
-  display: block;
 }
 
+
+
+
+
+
+.model img {
+  max-width: 100%;
+  max-height: 100%;
+  object-fit: contain; /* Adjust as needed */
+}
 
 
 @media(max-width:991px){
