--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -27,9 +27,9 @@ body {
 }
 
 .gallery{
-  -webkit-column-count: 3;
-  -moz-column-count: 3;
-  column-count: 3;
+  -webkit-column-count: 1;
+  -moz-column-count: 1;
+  column-count: 1;
   -webkit-column-width: 33%;
   -moz-column-width: 33%;
   column-width: 33%;
@@ -58,7 +58,7 @@ body {
 }
 
 
-@media(max-width:991px){
+/* @media(max-width:991px){
   .gallery{
     -webkit-column-count: 1;
     -moz-column-count: 1;
@@ -79,7 +79,7 @@ body {
   column-width: 100%;
  
   }
-}
+} */
 
 .model{
   width: 100%;
